drupal-quick/drupal-quick-with-pvc.yml
apiVersion: v1
kind: Pod
metadata:
  name:  drupal-vol
  namespace: default
  labels:
    app:  drupal-vol
spec:
  containers:
  - name:  drupal-vol1
    image:  zterry95/drupal-quick
    volumeMounts:
    - name: drupal-sqlite
      mountPath: /data
  volumes:
    - name: drupal-sqlite
      persistentVolumeClaim:
        claimName: drupal-quick-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: drupal-vol-service
spec:
  selector:
    app: drupal-vol 
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32008
