drupal-quick/service-drupal.yml
apiVersion: v1
kind: Service
metadata:
  name: drupal-service
spec:
  selector:
    app: drupal
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32001
