drupal-quick/drupal-quick.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myserviceb
spec:
  rules:
  - host: k8s-drupal.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: drupal-service
            port: 
              number: 80
  ingressClassName: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: drupal-service
spec:
  selector:
    app: drupal
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  drupal
  namespace: default
  labels:
    app:  drupal
spec:
  selector:
    matchLabels:
      app: drupal
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  drupal
    spec:
      containers:
      - name:  drupal
        image:  zterry95/drupal-quick
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /robots.txt
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  80
          name:  drupal
      restartPolicy: Always
