drupal-quick/ingress-example.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myserviceb
spec:
  rules:
  - host: k8s-drupal.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: drupal-service
            port: 
              number: 80
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rewrite
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  namespace: default
spec:
  rules:
  - host: k8s-drupal.com
    http:
      paths:
      - path: /vol(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: drupal-vol-service
            port: 
              number: 80
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-rewrite
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  namespace: default
spec:
  rules:
  - host: k8s-drupal.com
    http:
      paths:
      - path: /nginx(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port: 
              number: 80
  ingressClassName: nginx
